# zellij-claude-restore

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  ROADMAP.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
context/: architecture.md  conventions.md  glossary.md  legacy-ref.md  project.md  stack.md
docs/: record-demo.sh
hooks/: session-marker.py
layouts/: default.kdl.example  keybind.kdl.example
memory/: architect.md  developer.md  qa.md
memory/architect/: add-unit-tests.md
memory/developer/: add-unit-tests.md
openspec/: _cross-spec-context.md  config.yaml
openspec/_cross-spec-context/: kdl-enrichment-testability.md
openspec/changes/archive/2026-06-30-add-unit-tests/: _decisions.jsonl  _glossary.md  _handoff.md  _progress.md  _state.json  design.md  dev-test-report.md  proposal.md  qa-report.md  release.md  tasks.md
openspec/changes/archive/2026-06-30-add-unit-tests/specs/kdl-enrichment-testability/: spec.md
openspec/specs/kdl-enrichment-testability/: spec.md
shell/: snap.bash  snap.fish  snap.zsh
src/: enrich.rs  lib.rs  main.rs
